add note about rate limit

--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -7,17 +7,17 @@ import {Cards} from "@/components/Cards";
 
 # Migrate to Clerk from Another Platform
 
-There are typically two ways you would choose to migrate your existing user management from a different platform and into Clerk:
-- Basic Export / Import
-- Trickle migration
+There are typically two main strategies for migrating your existing user management from a different platform and into Clerk:
+- [Basic Export / Import](#TODO)
+- [Trickle migration](#TODO)
 
 Each of these have trade-offs you'll need to consider for your application and your users. 
 
 ## Basic Export / Import
 
-With Basic Export / Import, you are simply taking an export from your previous tool and importing them into Clerk. The most common way to handle this is via our [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) using the `CreateUser` API endpoint. Note that the `CreateUser`
+With Basic Export / Import, you are simply taking an export from your previous tool and importing them into Clerk. The most common way to handle this is via our [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) using the `CreateUser` API endpoint. Note that the `CreateUser` endpoint has a rate limit of 20 requests per 10 seconds. 
 
-You'll need to provide your `password_hasher` value (The hashing algorithm used to generate the password digest) and in some instances Clerk will transparently upgrade your user's password hashes to the more secure Bcrypt hashing algorithm. More details on this are available in the [Create a new user](/docs/reference/backend-api/tag/Users#operation/CreateUser!path=password_hasher&t=request) Backend API Reference docs.  
+You'll also need to provide your `password_hasher` value (The hashing algorithm used to generate the password digest) and in some instances Clerk will transparently upgrade your user's password hashes to the more secure Bcrypt hashing algorithm. More details on this are available in the [Create a new user](/docs/reference/backend-api/tag/Users#operation/CreateUser!path=password_hasher&t=request) Backend API Reference docs.  
 
 > **Note:** If you are expecting to import 100k+ users, please reach out to [support](mailto:support@clerk.dev) 
 
@@ -39,6 +39,27 @@ In your previous system you likely had some kind of ID / Foreign Key that you we
 	"userId": "{{user.external_id || user.id}}"
 }
 ``````
+
+
+## Trickle migration
+With Trickle migration you are slowly migrating your users from your previous system into Clerk. Depending on your application's needs this can be a great way to accomplish migration in a gradual and more controlled way. With Trickle migration, you're keeping both systems running for some period of time, handling the transition between systems opaquely to your users, and then eventually cutting over fully to Clerk as your user and session management system or record. By handling this transition gradually you'll maintain more control and put less pressure on a single coordinated event.
+
+### Considerations
+As with the Basic Import / Export workflow there are a tradeoffs you'll need to consider, to determine which strategy is best for your application.
+
+#### The cost and overhead of running two systems in parallel 
+Because you'll need both systems available when doing a gradual migration, there is naturally additional short-term costs related to having both running systems at the same time. 
+
+It's important to note here that Clerk only charges by *Monthly Active Users* and never based on your total number of Users in the user table – so during this period you'll only be charged for user's who create an active session within Clerk. Head to our [pricing page](/pricing) to get an overview on how we charge.
+
+#### Determining the appropriate length of time
+As part of the trickle migration, you'll need to determine an appropriate length of time for the migration to take place. For some applications this might be a few weeks but for others it might be more appropriate to run this for months. Your hard costs, coordination costs, underlying complexity, and the amount of active users you have compared to your total number of accounts should guide your decision here.
+
+#### Dealing with the delta
+Trickle migration is great for upgrading active users and sessions to take advantage of Clerk but there will always be some users who won't create an active session within the migration window and therefore will need to be migrated by other means, typically via [Basic Import / Export](#TODO). However, the benefit of trickle migration is that the risk of coordination becomes much lower as the delta users are likely to be less active, and the risk of data de-synchronization is reduced. 
+
+## Migration Tools
+While more first-class support for migration paths into and out of Clerk is on the wa, there are
 
 
 ---
