round out first draft

--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -8,8 +8,8 @@ import {Cards} from "@/components/Cards";
 # Migrate to Clerk from Another Platform
 
 There are typically two main strategies for migrating your existing user management from a different platform and into Clerk:
-- [Basic Export / Import](#TODO)
-- [Trickle migration](#TODO)
+- [Basic Export / Import](#basic-export-import)
+- [Trickle migration](#trickle-migration)
 
 Each of these have trade-offs you'll need to consider for your application and your users. 
 
@@ -50,20 +50,21 @@ As with the Basic Import / Export workflow there are a tradeoffs you'll need to 
 #### The cost and overhead of running two systems in parallel 
 Because you'll need both systems available when doing a gradual migration, there is naturally additional short-term costs related to having both running systems at the same time. 
 
-It's important to note here that Clerk only charges by *Monthly Active Users* and never based on your total number of Users in the user table – so during this period you'll only be charged for user's who create an active session within Clerk. Head to our [pricing page](/pricing) to get an overview on how we charge.
+It's important to note here that Clerk only charges by *Monthly Active Users* and never based on your total number of Users in the user table – so during this period you'll only be charged for user's who create an active session within Clerk. Head to our [pricing page](/pricing) to get an overview on how Clerk charges.
 
 #### Determining the appropriate length of time
 As part of the trickle migration, you'll need to determine an appropriate length of time for the migration to take place. For some applications this might be a few weeks but for others it might be more appropriate to run this for months. Your hard costs, coordination costs, underlying complexity, and the amount of active users you have compared to your total number of accounts should guide your decision here.
 
 #### Dealing with the delta
-Trickle migration is great for upgrading active users and sessions to take advantage of Clerk but there will always be some users who won't create an active session within the migration window and therefore will need to be migrated by other means, typically via [Basic Import / Export](#TODO). However, the benefit of trickle migration is that the risk of coordination becomes much lower as the delta users are likely to be less active, and the risk of data de-synchronization is reduced. 
+Trickle migration is great for upgrading active users and sessions to take advantage of Clerk but there will always be some users who won't create an active session within the migration window and therefore will need to be migrated by other means, typically via [Basic Import / Export](#basic-export-import). However, the benefit of trickle migration is that the risk of coordination becomes much lower as the delta users are likely to be less active, and the risk of data de-synchronization is reduced. 
 
 ## Migration Tools
-While more first-class support for migration paths into and out of Clerk is on the wa, there are
 
+### [clerk/migration-script]("https://github.com/clerk/migration-script")
+An open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects rate limits and handles errors. We suggest you customize the [Zod schema]("https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43") to your application's needs.
 
----
-
+## Migration Guides
+Clerk is hard at work writing up more and more specific migration guides and tools. If you have are interested in specific guides please provide more feedback at https://feedback.clerk.com
 
 <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
