--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -104,7 +104,7 @@ if (!auth.userId && !auth.isPublicRoute) {
   return redirectToSignIn({ returnBackUrl: req.url });
 }
 ```
-2. If the user is signed in but is not currently active in an organization and is not visiting the route for selecting an org, then redirect them to the organization selector. This will force users to select and be active in an organization to visit other parts of the site.
+2. If the user is signed in but is not currently active in an organization and is not visiting the route for selecting an organization, then redirect them to the organization selector. This will force users to select and be active in an organization to visit other parts of the site.
 ```ts 
 if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
   const orgSelection = new URL('/org-selection', req.url)
