--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -117,7 +117,7 @@ if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
   return NextResponse.next()
 }
 ```
-4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter
+4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter.
 ```ts 
 return NextResponse.next();
 ```
