rewrite import/export to just be export

--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -19,7 +19,8 @@ With Basic Export / Import, you are simply taking an export from your previous t
 
 You'll also need to provide your `password_hasher` value (The hashing algorithm used to generate the password digest) and in some instances Clerk will transparently upgrade your user's password hashes to the more secure Bcrypt hashing algorithm. More details on this are available in the [Create a new user](/docs/reference/backend-api/tag/Users#operation/CreateUser!path=password_hasher&t=request) Backend API Reference docs.  
 
-> **Note:** If you are expecting to import 100k+ users, please reach out to [support](mailto:support@clerk.dev) 
+> **Note:** If you are expecting to import 100k+ users, please reach out to [support@clerk.dev](mailto:support@clerk.dev) where we can coordinate a seamless import
+
 
 ### Considerations
 When evaluating the Basic Import / Export workflow there are a few tradeoffs you'll need to consider. 
