last pass on export doc

--- a/docs/deployments/exporting-users.mdx
+++ b/docs/deployments/exporting-users.mdx
@@ -5,10 +5,10 @@ description: Learn how to export user's data from your Clerk application.
 
 ## Exporting your user's data from Clerk
 
-### Programattic access to user data
-Some applications may require the ability to fetch a list of all of their user's and their data. By using the [GetUserList](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUserList) endpoint of Clerk's Backend API, you can programattically export your user's data safely. 
+### Programmatic access to user data
+By using the [GetUserList](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUserList) endpoint of Clerk's Backend API, you can programmatically export your user's data safely. 
 
 Additionally, the [`getUserList()`](/docs/references/backend/user/get-user-list) method in the [Clerk Backend SDK](/docs/references/backend/overview) can also be used to retrieve a list of users.
 
 ## Migrating your users to a new system
-However if you wish to get your user's data that includes their hashed passwords, please reach out to [support](https://clerk.com/support) where we can assist you in a secure data exchange.
+While we don't expose this via our Backend APIs, if you wish to get your user's data that *includes their hashed passwords*, please reach out to [support@clerk.dev](https://clerk.com/support) where we can assist you in a secure data exchange.
