--- a/docs/deployments/exporting-users.mdx
+++ b/docs/deployments/exporting-users.mdx
@@ -11,4 +11,4 @@ By using the [GetUserList](https://clerk.com/docs/reference/backend-api/tag/User
 Additionally, the [`getUserList()`](/docs/references/backend/user/get-user-list) method in the [Clerk Backend SDK](/docs/references/backend/overview) can also be used to retrieve a list of users.
 
 ## Migrating your users to a new system
-While we don't expose this via our Backend APIs, if you wish to get your user's data that *includes their hashed passwords*, please [Contact Support](https://clerk.com/support) where we can export as .csv file and assist you in a secure data exchange.
+While we don't expose this via our Backend APIs, if you wish to get your user's data that *includes their hashed passwords*, please [Contact Support](https://clerk.com/support) where we can export a `.csv` file and assist you in a secure data exchange.
