--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -88,4 +88,19 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 ```
 </CodeBlockTabs>
 
+## Add global TypeScript type for additional session claims
+
+For projects using TypeScript, a global type for the additional session claims will avoid type errors in your code and provide auto-completion in your editior.
+
+```tsx filename="types/globals.d.ts"
+export { };
+
+declare global {
+  interface CustomJwtSessionClaims {
+    firstName?: string;
+    primaryEmail?: string;
+  }
+}
+```
+
 </Steps>
