fix broken external links on migration pages

--- a/docs/custom-flows/invitations.mdx
+++ b/docs/custom-flows/invitations.mdx
@@ -175,7 +175,7 @@ In order to add metadata to an invitation, you can use the `public_metadata` pro
 curl https://api.clerk.com/v1/invitations -X POST -d '{"email_address": "email@example.com", "public_metadata": {"user_type": "loyalty"}}' -H "Authorization:Bearer {{bapi}}" -H 'Content-Type:application/json'
 ```
 
-Once an invited user signs up using the invitation link, the invitation metadata will end up in the user's `public_metadata`. You can find more information about user metadata in the [metadata](docs/users/metadata) docs.
+Once an invited user signs up using the invitation link, the invitation metadata will end up in the user's `public_metadata`. You can find more information about user metadata in the [metadata](/docs/users/metadata) docs.
 
 ## Custom flow
 
