--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -39,7 +39,7 @@ In your previous system you likely had some kind of ID / Foreign Key that you we
 {
 	"userId": "{{user.external_id || user.id}}"
 }
-``````
+```
 
 
 ## Trickle migration
@@ -61,8 +61,8 @@ Trickle migration is great for upgrading active users and sessions to take advan
 
 ## Migration Tools
 
-### [clerk/migration-script]("https://github.com/clerk/migration-script")
-An open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects rate limits and handles errors. We suggest you customize the [Zod schema]("https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43") to your application's needs.
+### [clerk/migration-script](https://github.com/clerk/migration-script)
+An open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects rate limits and handles errors. We suggest you customize the [Zod schema](https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43) to your application's needs.
 
 ## Migration Guides
 Clerk is hard at work writing up more and more specific migration guides and tools. If you have are interested in specific guides please provide more feedback at https://feedback.clerk.com
