--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,61 +1,65 @@
 ---
 title: <Protect />
-description: The <Protect /> component is used to only render content that a user with a role with the correct permissions can access.
+description: The <Protect /> component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
 # `<Protect />`
 
-The `<Protect />` component only renders content that a user with [a Role with the correct Permissions](/docs/organizations/roles-permissions) can access.
+The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission](/docs/organizations/roles-permissions) or role in the organization.
 
 ## Usage
 
-You can pass either a `role` or `permission` to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+You can pass either a `permission` or `role` key to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
-### Render content by Role
-
-The children of the following component will only be visible to users with the `admin` Role.
-
-<Tabs type="framework" items={["Next.js", "React"]}>
-  <Tab>
-    ```jsx
-    import { Protect } from "@clerk/nextjs";
-
-    export default function ProtectPage() {
-      return (
-        <Protect
-          role="org:admin"
-          fallback={<p>Only an admin can access this content.</p>}
-        >
-          {children}
-        </Protect>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```jsx
-    import { Protect } from "@clerk/react";
-
-    export default function ProtectPage() {
-      return (
-        <Protect
-          role="org:admin"
-          fallback={<p>Only an admin can access this content.</p>}
-        >
-          {children}
-        </Protect>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
-
 ### Render content by Permissions
 
-The children of the following component will only be visible to users with Roles that have `domains:read` Permissions.
+The children of the following component will only be visible to users with Roles that have the `org:posts:create` permission.
+
+<Tabs type="framework" items={["Next.js", "React"]}>
+    <Tab>
+        ```jsx
+        import { Protect } from "@clerk/nextjs";
+
+        export default function ProtectPage() {
+            return (
+                <Protect
+                    permission="org:posts:create"
+                    fallback={<p>You do not have the permissions to create a post.</p>}
+                >
+                    {children}
+                </Protect>
+            );
+        }
+        ```
+    </Tab>
+
+    <Tab>
+        ```jsx
+        import { Protect } from "@clerk/react";
+
+        export default function ProtectPage() {
+            return (
+                <Protect
+                    permission="org:posts:create"
+                    fallback={<p>You do not have the permissions to create a post.</p>}
+                >
+                    {children}
+                </Protect>
+            );
+        }
+        ```
+    </Tab>
+</Tabs>
+
+### Render content by Role
+
+<Callout type="warning">
+    `<Protect/>` allows a role key to be passed for convenience, it is recommended to check against permissions instead.
+</Callout>
+
+The children of the following component will only be visible to users with the `org:editor` Role.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
@@ -64,9 +68,9 @@ The children of the following component will only be visible to users with Roles
 
     export default function ProtectPage() {
       return (
-        <Protect 
-          permission="org:domains:read"
-          fallback={<p>You do not have the permissions to access this.</p>}
+        <Protect
+          role="org:editor"
+          fallback={<p>Only an admin can access this content.</p>}
         >
           {children}
         </Protect>
@@ -81,9 +85,9 @@ The children of the following component will only be visible to users with Roles
 
     export default function ProtectPage() {
       return (
-        <Protect 
-          permission="org:domains:read"
-          fallback={<p>You do not have the permissions to access this.</p>}
+        <Protect
+          role="org:editor"
+          fallback={<p>Only an admin can access this content.</p>}
         >
           {children}
         </Protect>
@@ -92,10 +96,6 @@ The children of the following component will only be visible to users with Roles
     ```
   </Tab>
 </Tabs>
-
-<Callout type="warning">
-  Be sure to prefix all Roles and Permissions with `org:`.
-</Callout>
 
 ## Properties
 
@@ -106,4 +106,4 @@ Pass one of these properties.
 | `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
 | `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:action` |
 | `fallback` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
-| `condition` | `has => has({permission: <"org:team_settings:manage">}) || has({permission: "org:team_settings:read"})` | Optional conditional logic that renders the children if it returns `true`. |
+| `condition` | `has => boolean` | Optional conditional logic that renders the children if it returns `true`. |
